--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.1.4",
     "babel-preset-stage-0": "^6.24.1",
+    "grid-styled": "^2.0.0-4",
+    "html-react-parser": "^0.3.4",
     "isomorphic-fetch": "^2.2.1",
     "next": "latest",
     "react": "^15.4.2",
