--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.6.1",
+    "react-responsive": "^1.3.0",
     "styled-components": "^2.0.0-17"
   },
   "author": "Joshua Purcell <vuldin@gmail.com>",
