--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "export": "next export",
     "start": "next start"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.1.4",
     "babel-preset-stage-0": "^6.24.1",
+    "glamor": "^2.20.25",
     "grid-styled": "^2.0.0-4",
-    "html-react-parser": "^0.3.4",
     "isomorphic-fetch": "^2.2.1",
-    "next": "latest",
+    "moment": "^2.18.1",
+    "next": "^3.0.1-beta.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.6.1",
