--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "socialistrevolution.org-www",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
     "export": "next export",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.1.4",
     "babel-preset-stage-0": "^6.24.1",
+    "express": "^4.15.3",
     "glamor": "^2.20.25",
     "grid-styled": "^2.0.0-4",
-    "html-react-parser": "^0.3.5",
+    "html-to-react": "^1.2.11",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.18.1",
     "next": "^3.0.1-beta.1",
+    "next-routes": "^1.0.35",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.6.1",
