--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.1.4",
+    "babel-plugin-styled-components": "^1.1.7",
     "babel-preset-stage-0": "^6.24.1",
     "express": "^4.15.3",
     "glamor": "^2.20.25",
-    "grid-styled": "^2.0.0-4",
+    "grid-styled": "^2.0.0-9",
     "html-to-react": "^1.2.11",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.18.1",
-    "next": "^3.0.1-beta.1",
-    "next-routes": "^1.0.35",
+    "next": "^3.0.1-beta.14",
+    "next-routes": "^1.0.40",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.6.1",
-    "react-responsive": "^1.3.0",
-    "styled-components": "^2.0.0-17"
+    "react-responsive": "^1.3.4",
+    "styled-components": "^2.1.1"
   },
   "author": "Joshua Purcell <vuldin@gmail.com>",
   "license": "ISC",
