--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
   ],
   "plugins": [
     ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ],
-    [ "inline-react-svg" ]
+    [ "inline-react-svg" ],
+    "transform-decorators-legacy"
   ]
 }
