--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "grid-styled": "^2.0.0-10",
     "html-to-react": "^1.2.11",
     "isomorphic-fetch": "^2.2.1",
+    "mobx": "^3.2.2",
+    "mobx-react": "^4.2.2",
     "moment": "^2.18.1",
     "next": "^3.0.1-beta.18",
     "next-routes": "^1.0.40",
@@ -28,6 +30,7 @@
   "author": "Joshua Purcell <vuldin@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "babel-plugin-inline-react-svg": "^0.4.0"
+    "babel-plugin-inline-react-svg": "^0.4.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4"
   }
 }
