--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.6.1",
+    "react-ga": "^2.3.5",
     "react-player": "^0.19.1",
     "react-responsive": "^1.3.4",
     "styled-components": "^2.1.1"
