--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.1.7",
     "babel-preset-stage-0": "^6.24.1",
+    "cloudinary-react": "^1.0.4",
     "express": "^4.15.3",
     "glamor": "^2.20.30",
     "grid-styled": "^2.0.0-10",
