add instant search to /find, create /scroll page component for testing infinite scroll, minor store cleanup and change to getPostById function

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^15.4.2",
     "react-fontawesome": "^1.6.1",
     "react-ga": "^2.3.5",
+    "react-infinite-scroller": "^1.1.2",
+    "react-instantsearch": "^4.2.0",
     "react-player": "^0.19.1",
     "react-responsive": "^1.3.4",
     "styled-components": "^2.1.1"
