--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "socialistrevolution.org-www",
-  "version": "1.0.0",
+  "name": "socrev-web",
+  "private": true,
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
@@ -27,6 +27,7 @@
     "react-ga": "^2.3.5",
     "react-infinite-scroller": "^1.1.2",
     "react-instantsearch": "^4.2.0",
+    "react-markdown": "^3.1.3",
     "react-player": "^0.19.1",
     "react-responsive": "^1.3.4",
     "styled-components": "^2.1.1"
